[project]
name = "pybeam"
version = "0.1.0"
description = "PyBeam is an Asynchronous data processing framework that uses the Operator Pattern to process data in a modular and scalable way. It enables users to create custom nodes for filtering, transformation, and aggregation, and connect them to form complex data pipelines."
readme = "README.md"
authors = [
    { name = "mayank", email = "mackv210w@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pybeam"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
